--- a/app.yaml
+++ b/app.yaml
@@ -1,15 +1,30 @@
-runtime: python27
-api_version: 1
+#runtime: python27
+#api_version: 1
+
+runtime: python
+vm: true
+entrypoint: gunicorn -b :$PORT main:app
 threadsafe: yes
+
+runtime_config:
+  python_version: 3
+
+#[START env]
+env_variables:
+    GCLOUD_PROJECT: tizen-easy-widget
+    CLOUD_STORAGE_BUCKET: tizen-easy-widget-bucket
+#[END env]
 
 handlers:
 - url: .*
   script: main.app
-- url: /static
-  static_dir: static
+#- url: /static
+#  static_dir: static
 
 libraries:
 - name: jinja2
   version: "2.6"
 - name: markupsafe
   version: "0.15"
+- name: PIL
+  version: "1.1.7"
